test/inputs/expr/good/nested-multiline-nonempty.miros
$?3⟨
  hello
    $?2⟨
      world
    ⟩
⟩
