test/inputs/expr/bad/bad-indentation-nested-nonempty.miros
$?3{
  hello
      $?1{
    world
      }
    }
}
